--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,23 @@ body {
     background-color: #f7f7f7;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.contact-info {
+    font-size: 16px;
+    margin-right: 10px;
+    position: absolute;
+    bottom: 0;
+    right: 10px;
+    background-color: #ccc;
+    border-radius: 5px;
+    padding: 5px;
+    border: 1px solid #999;
+}
+
+.contact-info span {
+    margin-right: 10px;
 }
 
 h1 {
